<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="feature_edittask_description_title">Описание Задачи</string>
    <string name="feature_edittask_description_hint">Ввeдите текст</string>
    <string name="feature_edittask_description_no_text_hint">Описание</string>
    <string name="feature_edittask_title_no_text_hint">Залоговок</string>
    <string name="feature_edittask_task_completion_date_title">Срок завершения</string>
    <string name="feature_edittask_subtasks_title">Подзадачи</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="ResourceName">Hello blank fragment</string>
    <string name="feature_edittask_task">Задача</string>
    <string name="feature_edittask_add_task">Добавить задачу</string>
    <string name="feature_edittask_not_deadline">Деадлайн - нету</string>
    <string name="feature_edittask_save">Сохранить</string>
    <string name="feature_edittask_delete">Удалить</string>
    <string name="feature_edittask_cancel">Отмена</string>
</resources>