<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="ResourceName">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.add.TaskAddFragment"
        tools:ignore="ResourceName">


        <ImageView
            android:id="@+id/on_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/feature_edittask_save"
            android:textColor="#2746ED"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="@id/on_back_button"
            app:layout_constraintBottom_toBottomOf="@id/on_back_button"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:text="@string/feature_edittask_delete"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/on_back_button"
            app:layout_constraintBottom_toBottomOf="@id/on_back_button"
            android:layout_marginEnd="16dp"/>


<!--        <EditText-->
<!--            android:id="@+id/task_description_value"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginHorizontal="18dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:background="@android:color/transparent"-->
<!--            android:gravity="top"-->
<!--            android:hint="@string/feature_edittask_description_no_text_hint"-->
<!--            android:inputType="none"-->
<!--            android:minLines="4"-->
<!--            android:padding="24dp"-->
<!--            android:textColor="@color/text_color"-->
<!--            android:textColorHint="@color/grey_text"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/title_project" />-->

        <EditText
            android:id="@+id/title_project"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/feature_edittask_title_no_text_hint"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/on_back_button" />

        <View
            android:id="@+id/line0"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_project" />

        <EditText
            android:id="@+id/task_description_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/feature_edittask_description_no_text_hint"
            android:inputType="none"
            android:minLines="4"
            android:padding="24dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line0" />


        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description_value" />


        <LinearLayout
            android:id="@+id/day_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:drawableTint="@color/grey_text"
                android:text="Дата"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/task_item_bg"
                android:padding="10dp"
                android:text="Нет"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />


        </LinearLayout>

        <View
            android:id="@+id/line4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day_container" />



        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="16dp"
                android:gravity="center_vertical"
                android:drawableTint="@color/grey_text"
                android:text="Время"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/task_item_bg"
                android:padding="10dp"
                android:text="Нет"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />


        </LinearLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_container" />

        <LinearLayout
            android:id="@+id/subtasks_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="104dp"
            android:background="@drawable/task_item_bg"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subtasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtasks_title"
                tools:itemCount="2"
                tools:listitem="@layout/subtasks_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_subtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_add_bg"
                android:drawableTint="@color/text_color"
                android:drawableTintMode="add"
                android:text="@string/feature_edittask_add_task"
                android:textColor="@color/primary_color"
                android:textSize="12sp" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>