<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="ResourceName">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".presentation.add.TaskAddFragment"
        tools:ignore="ResourceName">


        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/feature_edittask_save"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/title_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/feature_edittask_title_no_text_hint"
            android:inputType="text"
            android:maxLines="1"
            android:minLines="1"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_button" />

        <View
            android:id="@+id/line0"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_task" />

        <EditText
            android:id="@+id/task_description_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/feature_edittask_description_no_text_hint"
            android:inputType="none"
            android:minLines="4"
            android:padding="24dp"
            android:textColor="@color/text_color"
            android:textColorHint="@color/grey_text"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line0" />


        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description_value" />


        <!--        <TextView-->
        <!--            android:id="@+id/deadline"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/feature_edittask_not_deadline"-->
        <!--            android:textColor="@color/text_color"-->
        <!--            android:textSize="16sp"-->
        <!--            app:layout_constraintTop_toTopOf="@id/line1"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            android:layout_margin="24dp"/>-->


        <LinearLayout
            android:id="@+id/date_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:clickable="true"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/grey_text"
                android:text="срок по задаче"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/task_item_bg"
                android:padding="10dp"
                android:text="Без даты"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />


        </LinearLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_container" />


        <LinearLayout
            android:id="@+id/time_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/grey_text"
                android:text="Время &amp; Напоминание"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/task_item_bg"
                android:padding="10dp"
                android:text="Нет"
                android:textColor="@color/grey_text"
                android:textSize="18sp" />


        </LinearLayout>

        <View
            android:id="@+id/line3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="#2E2F2F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time_container" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="104dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/task_item_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subtasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtasks_title"
                tools:itemCount="2"
                tools:listitem="@layout/subtasks_item" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_subtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/button_add_bg"
                android:drawableTint="@color/text_color"
                android:drawableTintMode="add"
                android:text="@string/feature_edittask_add_task"
                android:textColor="@color/primary_color"
                android:textSize="12sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>